lzh/style: unset letter-spacing to fix english display

--- a/assets/css/main_lzh.scss
+++ b/assets/css/main_lzh.scss
@@ -69,7 +69,6 @@ body {
 	}
 	max-height: 800px;
 	line-height: 2;
-	letter-spacing: .4px;
 }
 
 h1 {
